Re-added the driver period code

--- a/public/dataform.html
+++ b/public/dataform.html
@@ -123,14 +123,88 @@
 
                             <p>Parked in correct signal zone?</p>
                             <input type="radio" name="auto_signal" value="yes" id="8a">
-                            <label>Yes</label>
+                            <label>Yes, with custom sleeve</label>
+                            <input type="radio" name="auto_signal" value="yes" id="8a">
+                            <label>Yes, with default sleeve</label>
                             <input type="radio" name="auto_signal" value="no" id="8b" checked="true">
                             <label>No</label>
 
-                            https://www.youtube.com/watch?v=FLyHblqbPnE (At 3:15: What does this exactly mean?)
-
 
                     <h2>Driver Controlled</h2>
+
+
+                    <label for="cone_terminal">Cones placed inside terminal:</label>
+                    <select name="cone_terminal" id="cone_terminal" style="font-size: 18px;">
+                        <option value="N/A">N/A</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                      </select>
+
+                      <label for="ground_driver">Cones placed onto ground junctions:</label>
+                      <select name="ground_driver" id="ground_driver" style="font-size: 18px;">
+                          <option value="N/A">N/A</option>
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                          <option value="6">6</option>
+                          <option value="7">7</option>
+                          <option value="8">8</option>
+                          <option value="9">9</option>
+                        </select>
+  
+                        <br></br>
+  
+                        <label for="low_driver">Cones placed onto low junctions:</label>
+                        <select name="low_driver" id="low_driver" style="font-size: 18px;">
+                            <option value="N/A">N/A</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                          </select>
+                          
+                          <br></br>
+  
+                          <label for="medium_driver">Cones placed onto medium junctions:</label>
+                          <select name="medium_driver" id="medium_driver" style="font-size: 18px;">
+                              <option value="N/A">N/A</option>
+                              <option value="1">1</option>
+                              <option value="2">2</option>
+                              <option value="3">3</option>
+                              <option value="4">4</option>
+                            </select>
+  
+                            <br></br>
+  
+                            <label for="high_driver">Cones placed onto high junctions:</label>
+                            <select name="high_driver" id="high_driver" style="font-size: 18px;">
+                                <option value="N/A">N/A</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                              </select>
+
+
+
+
+
+
+
 
 
                     <label for="deliver_shared">How many game elements did they <br> place on the shared shipping hub<br> in driver control mode?<br></label>
