test edit, updating title to verify deployment

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <link rel= "StyleSheet" href="css/style.css">
-        <h1 class = "MR.COD">MR.COD Website</h1>
+        <h1 class = "MR.COD">This is a test run.</h1>
             <body>
                 <ul class = "navigation">
                     <li><a href="https://www.badgerbots.org/">Badger Bots</a></li>
