Updated const newRun to match new dataform id's, but post/get isn't working yet

--- a/public/dataform.html
+++ b/public/dataform.html
@@ -116,17 +116,17 @@
                             </select>
 
                             <p>Parked in alliance substation or terminal?</p>
-                            <input type="radio" name="auto_park" value="yes" id="8a">
+                            <input type="radio" name="auto_park" value="yes" id="auto_park_1">
                             <label>Yes</label>
-                            <input type="radio" name="auto_park" value="no" id="8b" checked="true">
+                            <input type="radio" name="auto_park" value="no" id="auto_park_2" checked="true">
                             <label>No</label>
 
                             <p>Parked in correct signal zone?</p>
-                            <input type="radio" name="auto_signal" value="yes" id="8a">
+                            <input type="radio" name="auto_signal" value="yes" id="auto_signal_1">
                             <label>Yes, with custom sleeve</label>
-                            <input type="radio" name="auto_signal" value="yes" id="8a">
+                            <input type="radio" name="auto_signal" value="auto_signal_2" id="8a">
                             <label>Yes, with default sleeve</label>
-                            <input type="radio" name="auto_signal" value="no" id="8b" checked="true">
+                            <input type="radio" name="auto_signal" value="auto_signal_3" id="8b" checked="true">
                             <label>No</label>
 
 
@@ -147,6 +147,8 @@
                         <option value="9">9</option>
                         <option value="10">10</option>
                       </select>
+
+                      <br></br>
 
                       <label for="ground_driver">Cones placed onto ground junctions:</label>
                       <select name="ground_driver" id="ground_driver" style="font-size: 18px;">
@@ -203,16 +205,18 @@
                               <h2>Endgame</h2>
           
           
-                              <label for="owned_juctions">Did the team end with a circuit?</label>
-                                 <input type="radio" name="owned_junctions" value="yes" id="8a">
+                              <label for="owned_junctions">Did the team end with a circuit?</label>
+                                 <input type="radio" name="owned_junctions" value="yes" id="owned_junctions_1">
                                  <label>Yes</label>
-                                 <input type="radio" name="owned_junctions" value="no" id="8b" checked="true">
+                                 <input type="radio" name="owned_junctions" value="no" id="owned_junctions_2" checked="true">
                                  <label>No</label>
 
+                                 <br></br>
+
                                  <label for="endgame_park">Parked in alliance terminal?</label>
-                                 <input type="radio" name="endgame_park" value="yes" id="8a">
+                                 <input type="radio" name="endgame_park" value="yes" id="endgame_park_1">
                                  <label>Yes</label>
-                                 <input type="radio" name="endgmae_park" value="no" id="8b" checked="true">
+                                 <input type="radio" name="endgame_park" value="no" id="endgame_park_2" checked="true">
                                  <label>No</label>
 
                     <h2 style="margin-bottom: 0px;">Penalty Points</h2>
