--- a/public/index.html
+++ b/public/index.html
@@ -138,8 +138,8 @@
                   src=
                   class="rounded-circle mb-3"
                   alt="">
-                 <h3 class="card-title mb-3">Logsama</h3>
-                 <P class="card-text">Logsama Burfsenpai has been a member of MR.COD since 2015</P> 
+                 <h3 class="card-title mb-3">Logsan</h3>
+                 <P class="card-text">Logan Burfield has been a member of MR.COD since 2015</P> 
               </div>
             </div>
           </div>
