Small changes to names on html.index and new subheading on style.css

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="dataform.html">Scouting Tool</a>
+            <a class="nav-link" href="#dataform.html">Scouting Tool</a>
             <a class="nav-link" href="#About">About Us</a>
             <a class="nav-link" href="#events">Events</a>
             <a class="nav-link" href="#FRQ">Frequently Asked Questions</a>
@@ -138,7 +138,7 @@
                   src=
                   class="rounded-circle mb-3"
                   alt="">
-                 <h3 class="card-title mb-3">Logsan</h3>
+                 <h3 class="card-title mb-3">Logan</h3>
                  <P class="card-text">Logan Burfield has been a member of MR.COD since 2015</P> 
               </div>
             </div>
@@ -186,17 +186,16 @@
     <!--Events Work on Background Color/ fluidability-->
     <h1 class="Events bg-dark" >Events</h1>
     <div id="events"></div>
-    <p class="silly">The most recent outreach event occured on Monday, October 17th. Team 17235, MR.COD visited Johnson Health Tech. Johnson Health Tech is an engineering company that focuses on manufacturing and the sale of excercise equipment. They are known for developing equipment that is commonly seen in gyms such as planet fitness. A future outreach event includes discussing with the mayor of Middleton, Gurdip Brar, about the creation of FIRST day.</p>
+    <p class="silly">The most recent outreach event occured on Saturday, December 17th. Team 17235, MR.COD volunteered to present their robot at the Madison Childrens' Museum. There, we presented the robot for 2 hours to hundreds of interested children.</p>
     
 
 
-
+    <h2 class=" f.r.q bg-dark"> Frequently Asked Questions</h2>
     <!--FAQ Accordian, Add more depending on what team wants-->
     <div id="FRQ"></div>
     <section id="questions" class="p-5">
       <div id="events"></div>
       <div class="container">
-        <h2 class="text-center mb-4">Frequently Asked Questions</h2>
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
@@ -205,17 +204,17 @@
               </button>
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">MR.COD has been a team since 2014, where we began as an FLL team and then made the switch to FTC in 2019.</div>
+              <div class="accordion-body">MR.COD has been a team since 2014, where we began as an FLL team and then made the switch to become an FTC team in 2019.</div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                Who is the best member in team MR.COD?
+                What is MR.CODS definition of gracious professionalism?
               </button>
             </h2>
             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Nihal Mahalingam is the goat of this team and is the Micheal Jordan of robotics. </div>
+              <div class="accordion-body">To us, gracious professionalism is a way of showing respect to all those around you and understanding the value that each individual has. In more of a FTC related sense, gracious professionalism is all about treating everyone kindly, whether they are an alliance member or a team we go up against. We think that gracious professionalism also promotes the idea that things can remain competitive while also being friendly, which can really help develop the community. </div>
             </div>
           </div>
           <div class="accordion-item">
@@ -228,10 +227,19 @@
               <div class="accordion-body">MR.COD stands for Mechanical Rainbow Cats Of Doom.</div>
             </div>
           </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                What is MR.CODS goal for this season?
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">MR. CODs objective is to spread STEM throughout communities with high minority rates with the goal to inspire many kids to involve themselves in STEM </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
-    <h1>Contact Us:</h1>
 
   </body>
 
