Fixed small index.html error

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#dataform.html">Scouting Tool</a>
+            <a class="nav-link" href="dataform.html">Scouting Tool</a>
             <a class="nav-link" href="#About">About Us</a>
             <a class="nav-link" href="#events">Events</a>
             <a class="nav-link" href="#FRQ">Frequently Asked Questions</a>
