Completely fixed About Us in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
     <div id="About"></div>
     <section id="Members" class="p-5 bg-primary">
       <div class="container">
-        <h1 class="About_Us">About Us</h1>
+        <h1 class="About_Us">MR.COD Members </h1>
         <p class="lead text-center text-white mb-5">
           Each member of team MR.COD is unique and all have there own skill sets
         </p>
@@ -175,7 +175,7 @@
                   class="rounded-circle mb-3"
                   alt="">
                  <h3 class="card-title mb-3">Caleb</h3>
-                 <P class="card-text">Caleb Hennegan has been a member of MR.COD since 2014</P> 
+                 <P class="card-text">Caleb Hennegan has been a member of MR. COD since 2014</P> 
               </div>
             </div>
           </div>
@@ -184,9 +184,9 @@
       
     </section>
     <!--Events Work on Background Color/ fluidability-->
-    <h1 class="Events bg-dark" >Events</h1>
+    <h1 class="Events bg-dark" >About Us</h1>
     <div id="events"></div>
-    <p class="silly">The most recent outreach event occured on Saturday, December 17th. Team 17235, MR.COD volunteered to present their robot at the Madison Childrens' Museum. There, we presented the robot for 2 hours to hundreds of interested children.</p>
+    <p class="silly">MR. COD Has been a team since 2014, we originally started out as an FLL team and in 2019 we decided to make the change to become an FTC team. We are situated in Middleton, Wisconsin and work closely with a non-profit known as Badger Bots which supplies a majority of our equipment and serves as a meeting space. Here at MR. COD, we try to mix fun, learning, and competition. We currently have 8 members in this 2022-2023 season. Our mission has been to spread STEM throughout communities with high minority rates to inspire disadvantaged youth to involve themselves in STEM. We take pride in knowing that we are advocators of both STEM and FIRST within our community.</p>
     
 
 
