--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                What is MR.CODS definition of gracious professionalism?
+                What is MR.COD's definition of gracious professionalism?
               </button>
             </h2>
             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
@@ -230,11 +230,11 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                What is MR.CODS goal for this season?
+                What is MR.COD's goal for this season?
               </button>
             </h2>
             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">MR. CODs objective is to spread STEM throughout communities with high minority rates with the goal to inspire many kids to involve themselves in STEM </div>
+              <div class="accordion-body">MR. COD's objective is to spread STEM throughout communities with high minority rates with the goal to inspire many kids to involve themselves in STEM </div>
             </div>
           </div>
         </div>
