phone looks good

--- a/public/dataform.html
+++ b/public/dataform.html
@@ -2,6 +2,7 @@
     <html>
         <head>
         <link rel= "StyleSheet" href="css/dataform.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         </head>
             <body>
                 <form action="/api/runs" method="POST">
