Added swagger.json and researched FIRST API

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
             <a class="nav-link" href="#FRQ">Frequently Asked Questions</a>
             <a class="nav-link" href="#Links">Links/References</a>
             <a class="nav-link" href="#Contact">Contact Us</a>
+            <a class="nav-link" href="#APITool">API Tool</a>
           </div>
         </div>
       </div>
