Added swagger.json and stats.js, experimented with API calls and authorization.

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="dataform.html">Scouting Tool</a>
+            <a class="nav-link" href="stats.js">WIP Tool</a>
             <a class="nav-link" href="#About">About Us</a>
             <a class="nav-link" href="#events">Events</a>
             <a class="nav-link" href="#FRQ">Frequently Asked Questions</a>
@@ -80,7 +81,7 @@
       <div class="container">
         <h1 class="About_Us">MR.COD Members </h1>
         <p class="lead text-center text-white mb-5">
-          Each member of team MR.COD is unique and all have there own skill sets
+          Each member of team MR.COD is unique and all have their own skill sets
         </p>
         <div class="row g-4">
           <div class="col-md-6 col-lg-3">
